fix overflow bug

--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,8 @@ body {
     background: white;
     font-family: Ruda-VariableFont, serif;
     overflow-x: hidden;
+    padding-left: env(safe-area-inset-left);
+    padding-right: env(safe-area-inset-right);
 }
 
 p {
@@ -95,8 +97,8 @@ footer {
 }
 
 @media only screen and (max-width: 600px) {
-    .pillar__container{
-        left: 10vw;
+    .pillar__container {
+        left: calc(10vw - env(safe-area-inset-left));
     }
 }
 
@@ -104,3 +106,6 @@ footer {
     display: none;
 }
 
+.main--container{
+    max-width: 100vw;
+}
